monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/ConservativeExtensionSuper.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar ConservativeExtensionSuper extends mc.grammars.types.TestTypes {

    M = Name;

    N = "one" M;

    P = "some" M*;

    Q = "optional" M?;
}