monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2007/A2007Super.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2007;

grammar A2007Super {

  Name = "name";

  N = "one" M;

  M = Name;

  P = "some" M*;

  Q = "optional" M?;

}